(Backend) Update: Add updateUser implementation